[create responsive] for mobile and pc device

--- a/index.html
+++ b/index.html
@@ -310,6 +310,7 @@
               </div>
             </div>
           </div>
+          <div><button class="primary-button">Get started</button></div>
         </div>
       </section>
 
@@ -491,209 +492,229 @@
             For <span class="section-color">business</span>
           </h2>
         </div>
-        <div class="business-videos">
-          <div class="business-video">
-            <img src="/assets/images/businnes-videos/b-health.png" alt="" />
-            <p>Health & Wealth</p>
-            <div class="video-icon">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="54"
-                height="46"
-                viewBox="0 0 54 46"
-                fill="none"
-              >
-                <g filter="url(#filter0_b_449_1137)">
-                  <ellipse
-                    cx="26.9129"
-                    cy="22.8321"
-                    rx="26.47"
-                    ry="22.8178"
-                    fill="black"
-                    fill-opacity="0.3"
-                  />
-                </g>
-                <path d="M22 17L34 23L22 29V17Z" fill="white" />
-                <defs>
-                  <filter
-                    id="filter0_b_449_1137"
-                    x="-22.2457"
-                    y="-22.6743"
-                    width="98.3171"
-                    height="91.0127"
-                    filterUnits="userSpaceOnUse"
-                    color-interpolation-filters="sRGB"
-                  >
-                    <feFlood flood-opacity="0" result="BackgroundImageFix" />
-                    <feGaussianBlur in="BackgroundImageFix" stdDeviation="20" />
-                    <!-- Increased blur effect -->
-                    <feComposite
-                      in2="SourceAlpha"
-                      operator="in"
-                      result="effect1_backgroundBlur_449_1137"
+        <div class="carousel-container">
+          <div class="business-videos">
+            <div class="business-video">
+              <img src="/assets/images/businnes-videos/b-health.png" alt="" />
+              <p>Health & Wealth</p>
+              <div class="video-icon">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="54"
+                  height="46"
+                  viewBox="0 0 54 46"
+                  fill="none"
+                >
+                  <g filter="url(#filter0_b_449_1137)">
+                    <ellipse
+                      cx="26.9129"
+                      cy="22.8321"
+                      rx="26.47"
+                      ry="22.8178"
+                      fill="black"
+                      fill-opacity="0.3"
                     />
-                    <feBlend
-                      mode="normal"
-                      in="SourceGraphic"
-                      in2="effect1_backgroundBlur_449_1137"
-                      result="shape"
-                    />
-                  </filter>
-                </defs>
-              </svg>
+                  </g>
+                  <path d="M22 17L34 23L22 29V17Z" fill="white" />
+                  <defs>
+                    <filter
+                      id="filter0_b_449_1137"
+                      x="-22.2457"
+                      y="-22.6743"
+                      width="98.3171"
+                      height="91.0127"
+                      filterUnits="userSpaceOnUse"
+                      color-interpolation-filters="sRGB"
+                    >
+                      <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                      <feGaussianBlur
+                        in="BackgroundImageFix"
+                        stdDeviation="20"
+                      />
+                      <!-- Increased blur effect -->
+                      <feComposite
+                        in2="SourceAlpha"
+                        operator="in"
+                        result="effect1_backgroundBlur_449_1137"
+                      />
+                      <feBlend
+                        mode="normal"
+                        in="SourceGraphic"
+                        in2="effect1_backgroundBlur_449_1137"
+                        result="shape"
+                      />
+                    </filter>
+                  </defs>
+                </svg>
+              </div>
             </div>
-          </div>
-          <div class="business-video">
-            <img src="/assets/images/businnes-videos/b-financial.png" alt="" />
-            <p>Financial services</p>
-            <div class="video-icon">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="54"
-                height="46"
-                viewBox="0 0 54 46"
-                fill="none"
-              >
-                <g filter="url(#filter0_b_449_1137)">
-                  <ellipse
-                    cx="26.9129"
-                    cy="22.8321"
-                    rx="26.47"
-                    ry="22.8178"
-                    fill="black"
-                    fill-opacity="0.3"
-                  />
-                </g>
-                <path d="M22 17L34 23L22 29V17Z" fill="white" />
-                <defs>
-                  <filter
-                    id="filter0_b_449_1137"
-                    x="-22.2457"
-                    y="-22.6743"
-                    width="98.3171"
-                    height="91.0127"
-                    filterUnits="userSpaceOnUse"
-                    color-interpolation-filters="sRGB"
-                  >
-                    <feFlood flood-opacity="0" result="BackgroundImageFix" />
-                    <feGaussianBlur in="BackgroundImageFix" stdDeviation="20" />
-                    <!-- Increased blur effect -->
-                    <feComposite
-                      in2="SourceAlpha"
-                      operator="in"
-                      result="effect1_backgroundBlur_449_1137"
+            <div class="business-video">
+              <img
+                src="/assets/images/businnes-videos/b-financial.png"
+                alt=""
+              />
+              <p>Financial services</p>
+              <div class="video-icon">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="54"
+                  height="46"
+                  viewBox="0 0 54 46"
+                  fill="none"
+                >
+                  <g filter="url(#filter0_b_449_1137)">
+                    <ellipse
+                      cx="26.9129"
+                      cy="22.8321"
+                      rx="26.47"
+                      ry="22.8178"
+                      fill="black"
+                      fill-opacity="0.3"
                     />
-                    <feBlend
-                      mode="normal"
-                      in="SourceGraphic"
-                      in2="effect1_backgroundBlur_449_1137"
-                      result="shape"
-                    />
-                  </filter>
-                </defs>
-              </svg>
+                  </g>
+                  <path d="M22 17L34 23L22 29V17Z" fill="white" />
+                  <defs>
+                    <filter
+                      id="filter0_b_449_1137"
+                      x="-22.2457"
+                      y="-22.6743"
+                      width="98.3171"
+                      height="91.0127"
+                      filterUnits="userSpaceOnUse"
+                      color-interpolation-filters="sRGB"
+                    >
+                      <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                      <feGaussianBlur
+                        in="BackgroundImageFix"
+                        stdDeviation="20"
+                      />
+                      <!-- Increased blur effect -->
+                      <feComposite
+                        in2="SourceAlpha"
+                        operator="in"
+                        result="effect1_backgroundBlur_449_1137"
+                      />
+                      <feBlend
+                        mode="normal"
+                        in="SourceGraphic"
+                        in2="effect1_backgroundBlur_449_1137"
+                        result="shape"
+                      />
+                    </filter>
+                  </defs>
+                </svg>
+              </div>
             </div>
-          </div>
-          <div class="business-video">
-            <img src="/assets/images/businnes-videos/b-real-state.png" alt="" />
-            <p>Real estate</p>
-            <div class="video-icon">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="54"
-                height="46"
-                viewBox="0 0 54 46"
-                fill="none"
-              >
-                <g filter="url(#filter0_b_449_1137)">
-                  <ellipse
-                    cx="26.9129"
-                    cy="22.8321"
-                    rx="26.47"
-                    ry="22.8178"
-                    fill="black"
-                    fill-opacity="0.3"
-                  />
-                </g>
-                <path d="M22 17L34 23L22 29V17Z" fill="white" />
-                <defs>
-                  <filter
-                    id="filter0_b_449_1137"
-                    x="-22.2457"
-                    y="-22.6743"
-                    width="98.3171"
-                    height="91.0127"
-                    filterUnits="userSpaceOnUse"
-                    color-interpolation-filters="sRGB"
-                  >
-                    <feFlood flood-opacity="0" result="BackgroundImageFix" />
-                    <feGaussianBlur in="BackgroundImageFix" stdDeviation="20" />
-                    <!-- Increased blur effect -->
-                    <feComposite
-                      in2="SourceAlpha"
-                      operator="in"
-                      result="effect1_backgroundBlur_449_1137"
+            <div class="business-video">
+              <img
+                src="/assets/images/businnes-videos/b-real-state.png"
+                alt=""
+              />
+              <p>Real estate</p>
+              <div class="video-icon">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="54"
+                  height="46"
+                  viewBox="0 0 54 46"
+                  fill="none"
+                >
+                  <g filter="url(#filter0_b_449_1137)">
+                    <ellipse
+                      cx="26.9129"
+                      cy="22.8321"
+                      rx="26.47"
+                      ry="22.8178"
+                      fill="black"
+                      fill-opacity="0.3"
                     />
-                    <feBlend
-                      mode="normal"
-                      in="SourceGraphic"
-                      in2="effect1_backgroundBlur_449_1137"
-                      result="shape"
-                    />
-                  </filter>
-                </defs>
-              </svg>
+                  </g>
+                  <path d="M22 17L34 23L22 29V17Z" fill="white" />
+                  <defs>
+                    <filter
+                      id="filter0_b_449_1137"
+                      x="-22.2457"
+                      y="-22.6743"
+                      width="98.3171"
+                      height="91.0127"
+                      filterUnits="userSpaceOnUse"
+                      color-interpolation-filters="sRGB"
+                    >
+                      <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                      <feGaussianBlur
+                        in="BackgroundImageFix"
+                        stdDeviation="20"
+                      />
+                      <!-- Increased blur effect -->
+                      <feComposite
+                        in2="SourceAlpha"
+                        operator="in"
+                        result="effect1_backgroundBlur_449_1137"
+                      />
+                      <feBlend
+                        mode="normal"
+                        in="SourceGraphic"
+                        in2="effect1_backgroundBlur_449_1137"
+                        result="shape"
+                      />
+                    </filter>
+                  </defs>
+                </svg>
+              </div>
             </div>
-          </div>
-          <div class="business-video">
-            <img src="/assets/images/businnes-videos/b-home.png" alt="" />
-            <p>Home services</p>
-            <div class="video-icon">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="54"
-                height="46"
-                viewBox="0 0 54 46"
-                fill="none"
-              >
-                <g filter="url(#filter0_b_449_1137)">
-                  <ellipse
-                    cx="26.9129"
-                    cy="22.8321"
-                    rx="26.47"
-                    ry="22.8178"
-                    fill="black"
-                    fill-opacity="0.3"
-                  />
-                </g>
-                <path d="M22 17L34 23L22 29V17Z" fill="white" />
-                <defs>
-                  <filter
-                    id="filter0_b_449_1137"
-                    x="-22.2457"
-                    y="-22.6743"
-                    width="98.3171"
-                    height="91.0127"
-                    filterUnits="userSpaceOnUse"
-                    color-interpolation-filters="sRGB"
-                  >
-                    <feFlood flood-opacity="0" result="BackgroundImageFix" />
-                    <feGaussianBlur in="BackgroundImageFix" stdDeviation="20" />
-                    <!-- Increased blur effect -->
-                    <feComposite
-                      in2="SourceAlpha"
-                      operator="in"
-                      result="effect1_backgroundBlur_449_1137"
+            <div class="business-video">
+              <img src="/assets/images/businnes-videos/b-home.png" alt="" />
+              <p>Home services</p>
+              <div class="video-icon">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="54"
+                  height="46"
+                  viewBox="0 0 54 46"
+                  fill="none"
+                >
+                  <g filter="url(#filter0_b_449_1137)">
+                    <ellipse
+                      cx="26.9129"
+                      cy="22.8321"
+                      rx="26.47"
+                      ry="22.8178"
+                      fill="black"
+                      fill-opacity="0.3"
                     />
-                    <feBlend
-                      mode="normal"
-                      in="SourceGraphic"
-                      in2="effect1_backgroundBlur_449_1137"
-                      result="shape"
-                    />
-                  </filter>
-                </defs>
-              </svg>
+                  </g>
+                  <path d="M22 17L34 23L22 29V17Z" fill="white" />
+                  <defs>
+                    <filter
+                      id="filter0_b_449_1137"
+                      x="-22.2457"
+                      y="-22.6743"
+                      width="98.3171"
+                      height="91.0127"
+                      filterUnits="userSpaceOnUse"
+                      color-interpolation-filters="sRGB"
+                    >
+                      <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                      <feGaussianBlur
+                        in="BackgroundImageFix"
+                        stdDeviation="20"
+                      />
+                      <!-- Increased blur effect -->
+                      <feComposite
+                        in2="SourceAlpha"
+                        operator="in"
+                        result="effect1_backgroundBlur_449_1137"
+                      />
+                      <feBlend
+                        mode="normal"
+                        in="SourceGraphic"
+                        in2="effect1_backgroundBlur_449_1137"
+                        result="shape"
+                      />
+                    </filter>
+                  </defs>
+                </svg>
+              </div>
             </div>
           </div>
         </div>
@@ -1229,6 +1250,14 @@
               Lorem ipsum dolor sit amet consectetur adipiscing elit.
             </div>
           </div>
+          <div class="faq-item">
+            <div class="faq-question">
+              What cars do you have in your inventory?
+            </div>
+            <div class="faq-answer">
+              Lorem ipsum dolor sit amet consectetur adipiscing elit.
+            </div>
+          </div>
 
           <div class="faq-item">
             <div class="faq-question">
@@ -1249,6 +1278,8 @@
           </div>
         </div>
       </section>
+
+      <!-- --------------- Test Section -------------- -->
     </main>
     <!-- End Main Body Content -->
 
@@ -1301,14 +1332,14 @@
                 <h4>Contact us</h4>
                 <div id="form-container">
                   <input
-                    id="email-input"
+                    class="input-box"
                     type="email"
                     placeholder="Email address"
                   />
                   <input
                     type="text"
                     name="phoneNumber"
-                    id="phone-number"
+                    class="input-box"
                     placeholder="Phone number"
                   />
                   <textarea
@@ -1327,16 +1358,18 @@
         </div>
         <!-- Footer section -->
         <div class="footer-section">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="1190"
-            height="2"
-            viewBox="0 0 1190 2"
-            fill="none"
-          >
-            <path d="M0 1L1190 0.999896" stroke="#D0D5DD" />
-            <p>© 2024 TaxDax. All rights reserved.</p>
-          </svg>
+          <div id="footer-divider">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="1190"
+              height="2"
+              viewBox="0 0 1190 2"
+              fill="none"
+            >
+              <path d="M0 1L1190 0.999896" stroke="#D0D5DD" />
+            </svg>
+          </div>
+          <p>© 2024 TaxDax. All rights reserved.</p>
         </div>
       </div>
     </footer>
