[created] and compleate desktop and mobile responsive

--- a/index.html
+++ b/index.html
@@ -986,7 +986,7 @@
           <div id="client-stories-header">
             <div class="section-title">
               Client Stories See
-              <img src="/assets/images/title-img.png" alt="" /> What
+              <img src="/assets/images/title-img.png" alt="" /> What <br />
               <span class="section-color">Our Partners Say</span>
             </div>
           </div>
